components:advantages: classnames refactor to avoid overlapping with other classes

--- a/src/components/molecules/advantages-list/advantages-list.scss
+++ b/src/components/molecules/advantages-list/advantages-list.scss
@@ -1,44 +1,45 @@
-.blocks {
-  width: 940px;
-  margin-top: 60px;
-  margin-bottom: 40px;
-}
+.advantages {
+  &__list {
+    width: 940px;
+    margin-top: 60px;
+    margin-bottom: 40px;
 
-.swiper-pagination-advantageslist {
-  display: none;
+    .swiper-pagination-advantageslist {
+      display: none;
+    }
+  }
 }
 
 @media screen and (max-width: 1050px) {
-  .blocks {
-    width: 275px;
-    margin: 0 auto;
-    margin-top: 25px;
-  }
+  .advantages {
+    &__list {
+      width: 275px;
+      margin: 0 auto;
+      margin-top: 25px;
+      position: relative;
 
-  .advantages-list {
-    position: relative;
-  }
+      .swiper {
+        &-pagination {
+          &-advantageslist {
+            position: absolute;
+            bottom: -30px;
+            display: unset;
+            z-index: 5;
+            text-align: center;
+          }
 
-  .swiper {
-    &-pagination {
-      &-advantageslist {
-        position: absolute;
-        bottom: -30px;
-        display: unset;
-        z-index: 5;
-        text-align: center;
-      }
+          &-bullet {
+            display: inline-block;
+            width: 14px;
+            height: 14px;
+            background: none;
+            background-repeat: no-repeat;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14' fill='none'%3E%3Cpath d='M7 0L13.6574 4.83688L11.1145 12.6631H2.8855L0.342604 4.83688L7 0Z' fill='white' fill-opacity='0.1'/%3E%3C/svg%3E");
 
-      &-bullet {
-        display: inline-block;
-        width: 14px;
-        height: 14px;
-        background: none;
-        background-repeat: no-repeat;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14' fill='none'%3E%3Cpath d='M7 0L13.6574 4.83688L11.1145 12.6631H2.8855L0.342604 4.83688L7 0Z' fill='white' fill-opacity='0.1'/%3E%3C/svg%3E");
-
-        &-active {
-          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14' fill='none'%3E%3Cpath d='M7 0L13.6574 4.83688L11.1145 12.6631H2.8855L0.342604 4.83688L7 0Z' fill='url(%23paint0_linear)'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='14.5265' y1='6.90025' x2='-0.0966765' y2='6.67173' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23CE09FF'/%3E%3Cstop offset='1' stop-color='%23FFA34E'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
+            &-active {
+              background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14' fill='none'%3E%3Cpath d='M7 0L13.6574 4.83688L11.1145 12.6631H2.8855L0.342604 4.83688L7 0Z' fill='url(%23paint0_linear)'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='14.5265' y1='6.90025' x2='-0.0966765' y2='6.67173' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23CE09FF'/%3E%3Cstop offset='1' stop-color='%23FFA34E'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
+            }
+          }
         }
       }
     }
